@@ -605,6 +605,9 @@ Trunk -  Unreleased
     HIVE-1846 Hive should not assume that local mode mappers run in same JVM
     (rvadali via jssarma)
 
+    HIVE-1849 add more logging to partition pruning
+    (namit via He Yongqiang)
+
     HIVE-1848 Bug in MAPJOIN with hints
     (He Yongqiang via namit)
 
